--- a/app/src/main/res/layout/activity_tv.xml
+++ b/app/src/main/res/layout/activity_tv.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.movie.MovieActivity">
+    tools:context=".ui.tv.TvActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
