--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -9,12 +9,14 @@
     android:orientation="vertical">
 
     <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tabsOne"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#FF9800"
         app:tabTextColor="#ffffff" />
 
     <androidx.viewpager.widget.ViewPager
+        android:id="@+id/viewPagerOne"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
