--- a/app/src/main/res/layout/item_list.xml
+++ b/app/src/main/res/layout/item_list.xml
@@ -20,12 +20,14 @@
             >
 
             <ImageView
+                android:id="@+id/imgItem"
                 android:layout_width="match_parent"
                 android:layout_height="190dp"
                 android:src="@mipmap/ic_launcher"
                 android:contentDescription="@string/todo" />
 
             <TextView
+                android:id="@+id/judulItem"
                 android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -38,6 +40,7 @@
                 android:fontFamily="@font/quicksand"/>
 
             <TextView
+                android:id="@+id/populerItem"
                 android:textColor="#000000"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
